fix horizontal scroll, input button, add transition

--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -23,6 +23,9 @@
     @include hover(background-color, $button-hover);
     @include active(background-color, $button-active);
     @include disabled(background-color, $button-disabled);
+    @include on-tablet {
+      max-width: 330px;
+    }
   }
 
   &--inform {
