--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -30,7 +30,7 @@
   }
 
   &__link {
-    @include hover(scale, 1.1);
+    @include hover(transform, scale(105%));
   }
 
   &__correspondence {
