--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -2,7 +2,7 @@
   display: block;
   background-size: cover;
 
-  @include hover(scale, 1.1);
+  @include hover(transform, scale(105%));
 
   &--menu {
     height: 20px;
