--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 .page {
   position: relative;
-  max-width: 1440px;
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
@@ -11,6 +14,8 @@
   }
 
   &__body {
+    width: 100%;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     background: $white;
