--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -33,9 +33,11 @@
     }
   }
 
-  &__input {
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     grid-column: 1 / 3;
-    width: 100%;
 
     @include on-tablet {
       grid-column: 1 / 5;
@@ -44,19 +46,6 @@
     @include on-desktop {
       grid-row: 2 / 3;
       grid-column: 1 / 6;
-    }
-  }
-
-  &__button {
-    grid-column: 1 / 3;
-
-    @include on-tablet {
-      grid-column: 1 / 4;
-    }
-
-    @include on-desktop {
-      grid-row: 3 / 4;
-      grid-column: 1 / 4;
     }
   }
 }
